--- a/package.json
+++ b/package.json
@@ -12,23 +12,23 @@
     "gulp-cssnano": "^2.1.1",
     "gulp-if": "^2.0.0",
     "gulp-plumber": "^1.1.0",
+    "gulp-sass": "^2.2.0",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-stylus": "^2.3.0",
     "gulp-uglify": "^1.5.2",
     "gulp-util": "^3.0.7",
     "gulp-watch": "^4.3.5",
-    "gulp-sass": "^2.2.0",
     "yargs": "^4.1.0"
   },
   "author": "https://github.com/fennefoss/ted_x",
   "devDependencies": {
+    "browser-sync": "^2.18.6",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
-    "gulp-livereload": "^3.8.1",
     "gulp-sass": "^2.2.0",
     "gulp-util": "^3.0.7"
   },
   "scripts": {
-      "gulp": "gulp"
- }
+    "gulp": "gulp"
+  }
 }
